<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="cursive"
            android:text="@string/q1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"/>

            <RadioButton
                android:id="@+id/rb12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"/>

            <RadioButton
                android:id="@+id/rb13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1"/>

            <RadioButton
                android:id="@+id/rb14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d1"/>


        </RadioGroup>




        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q2"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"/>

            <RadioButton
                android:id="@+id/rb22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2"/>

            <RadioButton
                android:id="@+id/rb23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c2"/>

            <RadioButton
                android:id="@+id/rb24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q3"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3"/>

            <RadioButton
                android:id="@+id/rb32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3"/>

            <RadioButton
                android:id="@+id/rb33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c3"/>

            <RadioButton
                android:id="@+id/rb34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d3"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q4"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a4"/>

            <RadioButton
                android:id="@+id/rb42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b4"/>

            <RadioButton
                android:id="@+id/rb43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c4"/>

            <RadioButton
                android:id="@+id/rb44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d4"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q5"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a5"/>

            <RadioButton
                android:id="@+id/rb52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b5"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c5"/>

            <RadioButton
                android:id="@+id/rb54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d5"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q6"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a6"/>

            <RadioButton
                android:id="@+id/rb62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b6"/>

            <RadioButton
                android:id="@+id/rb63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c6"/>

            <RadioButton
                android:id="@+id/rb64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d6"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q7"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a7"/>

            <RadioButton
                android:id="@+id/rb72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b7"/>

            <RadioButton
                android:id="@+id/rb73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c7"/>

            <RadioButton
                android:id="@+id/rb74"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d7"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q8"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb81"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a8"/>

            <RadioButton
                android:id="@+id/rb82"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b8"/>

            <RadioButton
                android:id="@+id/rb83"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c8"/>

            <RadioButton
                android:id="@+id/rb84"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d8"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q9"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb91"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a9"/>

            <RadioButton
                android:id="@+id/rb92"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b9"/>

            <RadioButton
                android:id="@+id/rb93"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c9"/>

            <RadioButton
                android:id="@+id/rb94"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d9"/>


        </RadioGroup>

        <TextView
            android:id="@+id/tv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/q10"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"/>

        <RadioGroup
            android:id="@+id/rg10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <RadioButton
                android:id="@+id/rb101"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10"/>

            <RadioButton
                android:id="@+id/rb102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b10"/>

            <RadioButton
                android:id="@+id/rb103"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c10"/>

            <RadioButton
                android:id="@+id/rb104"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d10"/>


        </RadioGroup>



        <Button
            android:id="@+id/b1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_dark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>


    </LinearLayout>
</ScrollView>